fix change the contrast Oct 22 23_36

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -15,7 +15,7 @@ nav a:hover {
 
 .active {
 	color:rgba(252, 252, 252);
-	background-color: rgb(79, 172, 86);
+	background-color: rgb(39, 83, 47);
 }
 .banner{
 	background-color: rgb(57, 191, 146);
